...
  String logOutAction() => "Odhlásiť";

  @override
  String removeFriendAction() => "Odstrániť priateľstvo";

  @override
  String language() => "Jazyk";

  @override
  String ofSteps() => "krokov";

  @override
  String maxLevel() => "Dosiahli ste maximálneho levelu";
...
